--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Damian Dorosz</title>
 		<meta charset="utf-8" />
@@ -24,6 +24,7 @@
 						<p>Game developer &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Geek</p>
 						<nav>
 							<ul>
+								<li><a href="https://damiandorosz.me/projects.html" class="fas fa-gamepad"><span class="label">Projects portfolio</span></a></li>
 								<li><a href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/damian-dorosz/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:email@damiandorosz.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -34,7 +35,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">Design by: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">Design by: <a href="https://html5up.net">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
