--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,9 @@
                     <h1>My projects</h1>
                     <nav>
                         <ul>
-                            <li><a href="https://damiandorosz.me/UnityBattleships/" class="fas fa-anchor"><span class="label">Sea battle game</span>Sea Battle</a></li>
-                            <li><a href="https://github.com/exostin/SuperCubeBoy3D/releases" class="fas fa-dice-d6"><span class="label">Super Cube Boy 3D game</span>Endless runner</a></li>
-                            <li><a href="https://github.com/exostin/ExpiryDate/releases" class="fas fa-leaf"><span class="label">Expiry Date</span>Expiry Date</a></li>
+                            <li><a href="https://github.com/exostin/ExpiryDate/releases" class="fas fa-leaf"><span class="label">Expiry Date</span></a></li>
+                            <li><a href="https://damiandorosz.me/UnityBattleships/" class="fas fa-anchor"><span class="label">Sea battle game</span></a></li>
+                            <li><a href="https://github.com/exostin/SuperCubeBoy3D/releases" class="fas fa-dice-d6"><span class="label">Super Cube Boy 3D game</span></a></li>
                         </ul>
                     </nav>
                 </header>
