--- a/projects.html
+++ b/projects.html
@@ -21,13 +21,12 @@
                 <!-- Header -->
                 <header id="header">
                     <h1>My projects</h1>
-                    <nav>
-                        <ul>
-                            <li><a href="https://github.com/exostin/ExpiryDate/releases" class="fas fa-leaf"><span class="label">Expiry Date</span></a></li>
-                            <li><a href="https://damiandorosz.me/UnityBattleships/" class="fas fa-anchor"><span class="label">Sea battle game</span></a></li>
-                            <li><a href="https://github.com/exostin/SuperCubeBoy3D/releases" class="fas fa-dice-d6"><span class="label">Super Cube Boy 3D game</span></a></li>
-                        </ul>
-                    </nav>
+                    <br>
+                    <ul style="font-family: 'Source Sans Pro'; font-size: 20pt;">
+                        <li><a href="https://github.com/exostin/ExpiryDate/" class="fas fa-leaf"><span class="label"> Expiry Date</span></a></li>
+                        <li><a href="https://github.com/exostin/UnityBattleships/" class="fas fa-anchor"><span class="label"> Sea battle</span></a></li>
+                        <li><a href="https://github.com/exostin/SuperCubeBoy3D" class="fas fa-dice-d6"><span class="label"> Super Cube Boy 3D</span></a></li>
+                    </ul>
                 </header>
         
                 <!-- Footer -->
