Add my public gpg key

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 								<li><a href="https://www.linkedin.com/in/damian-dorosz/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:email@damiandorosz.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://steamcommunity.com/id/Exostin/" class="icon brands fa-steam"><span class="label">Steam</span></a></li>
+								<li><a href="gpg.txt" class="fa fa-key"><span class="label">GPG</span></a></li>
 							</ul>
 						</nav>
 					</header>
