--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 						<p>Game developer &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Geek</p>
 						<nav>
 							<ul>
-								<li><a href="https://damiandorosz.me/projects.html" class="fas fa-gamepad"><span class="label">Projects portfolio</span></a></li>
-								<li><a href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/damian-dorosz/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:email@damiandorosz.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="https://steamcommunity.com/id/Exostin/" class="icon brands fa-steam"><span class="label">Steam</span></a></li>
-								<li><a href="gpg.txt" class="fa fa-key"><span class="label">GPG</span></a></li>
+								<li><a title="My GitHub page" href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a title="My projects" href="https://damiandorosz.me/projects.html" class="fas fa-gamepad"><span class="label">Projects portfolio</span></a></li>
+								<li><a title="Contact me" href="mailto:email@damiandorosz.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a title="My public encryption key" href="gpg.txt" class="fa fa-key"><span class="label">GPG</span></a></li>
+								<li><a title="See what I play" href="https://steamcommunity.com/id/Exostin/" class="icon brands fa-steam"><span class="label">Steam</span></a></li>
 							</ul>
 						</nav>
 					</header>
