--- a/projects.html
+++ b/projects.html
@@ -22,10 +22,10 @@
                 <header id="header">
                     <h1>My projects</h1>
                     <br>
-                    <ul style="font-family: 'Source Sans Pro'; font-size: 20pt;">
-                        <li><a href="https://github.com/exostin/ExpiryDate/" class="fas fa-leaf"><span class="label"> Expiry Date</span></a></li>
-                        <li><a href="https://github.com/exostin/UnityBattleships/" class="fas fa-anchor"><span class="label"> Sea battle</span></a></li>
-                        <li><a href="https://github.com/exostin/SuperCubeBoy3D" class="fas fa-dice-d6"><span class="label"> Super Cube Boy 3D</span></a></li>
+                    <ul style="font-size: 28pt;">
+                        <li><a href="https://github.com/exostin/ExpiryDate/" class="fas fa-leaf"><span class="label" style="font-family: 'Source Sans Pro';"> Expiry Date</span></a></li>
+                        <li><a href="https://github.com/exostin/UnityBattleships/" class="fas fa-anchor"><span class="label" style="font-family: 'Source Sans Pro';"> Sea battle</span></a></li>
+                        <li><a href="https://github.com/exostin/SuperCubeBoy3D" class="fas fa-dice-d6"><span class="label" style="font-family: 'Source Sans Pro';"> Super Cube Boy 3D</span></a></li>
                     </ul>
                 </header>
         
