--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<ul>
 								<li><a title="My GitHub page" href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a title="My projects" href="projects.html" class="fas fa-gamepad"><span class="label">Projects portfolio</span></a></li>
-								<li><a title="Send me an email" href="mailto:email@damiandorosz.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a title="Send me an email" href="mailto:96ab9edb-d6f6-4282-8648-63122da39979@simplelogin.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								<li><a title="My public encryption key" href="gpg.txt" class="fa fa-key"><span class="label">PGP</span></a></li>
 								<li><a title="Send me an instant message on fully secure SimpleX Chat " href="MessageMe.html" class="fas fa-comments"><span class="label">Instant message</span></a></li>
 								<li><a title="See what I play" href="https://steamcommunity.com/id/Exostin/" class="icon brands fa-steam"><span class="label">Steam</span></a></li>
