Update the background picture; remove projects and steam from main page

--- a/index.html
+++ b/index.html
@@ -17,26 +17,18 @@
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
-
-				<!-- Header -->
 					<header id="header">
 						<h1>Damian Dorosz</h1>
-						<p>Game developer &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Geek</p>
 						<nav>
 							<ul>
-								<li><a title="My GitHub page" href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a title="My projects" href="projects.html" class="fas fa-gamepad"><span class="label">Projects portfolio</span></a></li>
+								<li><a title="My GitHub page" href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								<li><a title="My public encryption key" href="gpg.txt" class="fa fa-key"><span class="label">PGP</span></a></li>
-								<li><a title="See what I play" href="https://steamcommunity.com/id/Exostin/" class="icon brands fa-steam"><span class="label">Steam</span></a></li>
 							</ul>
 						</nav>
 					</header>
-
-				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">Design by: <a href="https://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">Template: <a href="https://html5up.net">HTML5 UP</a> &bull; Background: <a href="https://unsplash.com/@pawel_czerwinski">Paweł Czerwiński</a></span>
 					</footer>
-
 			</div>
 		</div>
 		<script>
