Add a skills section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div id="main">
 					<header id="header">
 						<h1>Damian Dorosz</h1>
+						<img src="https://skillicons.dev/icons?i=cs,dotnet,unity" class="skillsSection">
 						<nav>
 							<ul>
 								<li><a title="My GitHub page" href="https://www.github.com/Exostin" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
